LIPS-302 Prod Issue - Hashtag border is truncated  -PFA

--- a/src/assets/sass/custom/_forms.scss
+++ b/src/assets/sass/custom/_forms.scss
@@ -467,7 +467,7 @@ input:checked + .lps_int_slider:before {
       margin-right: 10px;
       margin-bottom: 8px;
       padding: 5px 8px;
-      min-width: 80px;
+      min-width: auto;
     }
   }
 }
